# flow

./: .gitignore  AGENTS.md  COMPLETED.md  Cargo.toml  PLANNING_QUESTIONS.md  README.md  TODO.md  cycles.toml  rustfmt.toml
.cargo/: config.toml
.claude/skills/: coding-iteration.md  reflect.md  update-todos.md
.claude/skills/coding-iteration/: SKILL.md
.claude/skills/gardening/: SKILL.md
.claude/skills/planning/: SKILL.md
.claude/skills/reflect/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/update-todos/: SKILL.md
plans/: 001-mvp-pipeline-runner.md  002-full-architecture.md  003-multi-step-cycles.md  TEMPLATE.md
src/: doctor.rs  init.rs  lib.rs  main.rs  pipeline.rs  testutil.rs
src/claude/: cli.rs  mod.rs  permissions.rs  session.rs  stream.rs
src/cli/: display.rs  mod.rs
src/cycle/: config.rs  context.rs  executor.rs  mod.rs  router.rs  rules.rs  selector.rs  template.rs
src/log/: jsonl.rs  mod.rs  progress.rs
tests/: integration_test.rs  pipeline_test.rs
