[package]
name = "flow"
version = "0.1.0"
edition = "2021"
authors = ["Lauri Piispanen"]
description = "An automated coding pipeline runner that orchestrates structured code production using Claude Code"
license = "MIT"
repository = "https://github.com/yourusername/flow"
readme = "README.md"
keywords = ["automation", "ai", "pipeline", "coding", "orchestration"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
colored = "3.1.1"
toml_edit = "0.22"

[dev-dependencies]
tempfile = "3.10"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Allow some pedantic lints that are too strict for initial development
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
